# SK2ProjectKahoot

./: ABCnetInterface.hpp  ABCq&aInterface.hpp  ABCuserInterface.hpp  Answer.cpp  Answer.hpp  CMakeLists.txt  GameConfig.txt  Kahoot.cpp  Kahoot.hpp  QnAManager.hpp  Question.cpp  Question.hpp  README.md  client.cpp  client.h  clientconnectionmanager.cpp  clientconnectionmanager.h  gameclient.cpp  gameclient.h  gameserver.cpp  gameserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowv2.cpp  mainwindowv2.h  server.cpp  server.h
Questions/: ABCQandAInterface.hpp  Answer.hpp  QnAManager.hpp  Question.hpp
client/: client.cpp  client.h  clientconnectionmanager.cpp  clientconnectionmanager.h
game/: gameclient.cpp  gameclient.h  gameserver.cpp  gameserver.h
page/: clientconnectionpage.cpp  clientconnectionpage.h  gamepage.cpp  gamepage.h  gmpage.cpp  gmpage.h  page.cpp  page.h  selectionpage.cpp  selectionpage.h  setpathpage.cpp  setpathpage.h
server/: server.cpp  server.h
